[project]
name = "data_sources"
version = "0.1.0"
description = "data sources downloadader and transfomer"
authors = [
{name = "Patryk"}
]
dependencies = [
"requests>=2.31.0",
"pandas>=2.0.0"
]
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"